# Rag-lanchain

./: .env  chatbot.ipynb  pyproject.toml
class1/: main.py
tests/: test_project.py
